--- a/LightGBM_handbook.ipynb
+++ b/LightGBM_handbook.ipynb
@@ -27,29 +27,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# LightGBM Handbook\n",
+        "\n",
+        "私がLightGBM使う上で調べたことをまとめてみました！  \n",
+        "基本的な使い方や注意事項、便利関数、自動パラメータチューニングについて書いています。\n",
+        "\n",
+        "LightGBMについて基本的なことは知ってる人はチートシート的に見ていただけると思います！\n",
+        "基本的な機能だけでなく、LightGBMを使う上での注意点だったり、可視化の便利関数だったり普通に使っていても気づきづらいことも掲載しています。どれか一つでもお役に立てば幸いです！"
+      ],
+      "metadata": {
+        "id": "AVzfP541-aE6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install lightgbm==4.5.0"
       ],
       "metadata": {
-        "id": "cdGTQV8bSW_R",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f26fe9e7-f1b5-4ce7-fb40-9e59712b8bbf"
+        "id": "cdGTQV8bSW_R"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: lightgbm==4.5.0 in /usr/local/lib/python3.11/dist-packages (4.5.0)\n",
-            "Requirement already satisfied: numpy>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from lightgbm==4.5.0) (1.26.4)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from lightgbm==4.5.0) (1.13.1)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -57,34 +58,10 @@
         "!pip install optuna-integration"
       ],
       "metadata": {
-        "id": "wgH7WYhhScTM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a594a20e-a6a7-4670-c450-a3a31f6b46d6"
+        "id": "wgH7WYhhScTM"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: optuna-integration in /usr/local/lib/python3.11/dist-packages (4.2.1)\n",
-            "Requirement already satisfied: optuna in /usr/local/lib/python3.11/dist-packages (from optuna-integration) (4.2.1)\n",
-            "Requirement already satisfied: alembic>=1.5.0 in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (1.14.1)\n",
-            "Requirement already satisfied: colorlog in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (6.9.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (1.26.4)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (24.2)\n",
-            "Requirement already satisfied: sqlalchemy>=1.4.2 in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (2.0.38)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (4.67.1)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.11/dist-packages (from optuna->optuna-integration) (6.0.2)\n",
-            "Requirement already satisfied: Mako in /usr/local/lib/python3.11/dist-packages (from alembic>=1.5.0->optuna->optuna-integration) (1.3.9)\n",
-            "Requirement already satisfied: typing-extensions>=4 in /usr/local/lib/python3.11/dist-packages (from alembic>=1.5.0->optuna->optuna-integration) (4.12.2)\n",
-            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from sqlalchemy>=1.4.2->optuna->optuna-integration) (3.1.1)\n",
-            "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.11/dist-packages (from Mako->alembic>=1.5.0->optuna->optuna-integration) (3.0.2)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
